# consensobot

./: .gitignore  Makefile  README.md  setup.cfg
consenso/: bot.py  corpus.py  directories.py  test_bot.py  test_corpus.py
consenso/bot/: ConsensoBotTac.py  cli.py  client.py  ircclient.py  mock.py  mock_ircserver.py  tac.py  test_client.py  test_ircclient.py
features/: cli_corpus.feature  cli_irc.feature  environment.py
features/steps/: cli.py  corpus.py  irc.py
scripts/: consensobot
test_data/: test_corpus.txt
