[metadata]
name = consensobot
version = 0.1
summary = Consensobot is an IRC bot that lives at #noisebridge and does various housekeeping items.
description-file = README.md
home_page = http://github.com/noisebridge/consensobot
author = Consenso
author-email = consenso@noisebridge.net
maintainer = Danny O'Brien
maintainer-email = danny@spesh.com
classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Communications :: Chat :: Internet Relay Chat
    Topic :: Scientific/Engineering :: Artificial Intelligence

[files]
scripts = scripts/consensobot
extra_files =
    setup.cfg
    setup.py
    README.md
packages = consenso
